--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"dotenv": "^16.3.1",
+		"mongodb": "^6.0.0",
 		"svelte-dnd-action": "^0.9.28"
 	}
 }
