--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"axios": "^1.5.0",
 		"dotenv": "^16.3.1",
 		"mongodb": "^6.0.0",
 		"svelte-dnd-action": "^0.9.28"
