--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 .DS_Store
 node_modules
 /build
-/.svelte-kit
+frontend/.svelte-kit
 /package
 .env
 .env.*
@@ -11,3 +11,7 @@ vite.config.ts.timestamp-*
 .venv
 __pycache__
 .vscode
+*.tfvars
+*.tfstate*
+.terraform
+.terraform.lock.hcl
